# tabnews-rss

./: .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  run.py  tabrss.go
service/: __init__.py  constants.go  errors.go  utils.go  utils.py
service/database/: __init__.py  local.py  model.go  model.py  sqlite.go
service/feed/: generator.go  posts_extractor.go
service/handler/: api.go  register.go  rss.go
service/handlers/: __init__.py  api.py  register.py  rss.py
web/: index.html  script.js  style.css
