[tool.poetry]
name = "tabnews-rss"
version = "0.1.0"
description = ""
authors = ["Dheison Gomes <dheisomgomes0@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tabnews_rss"}]

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.3.0"
feedparser = "^6.0.10"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
python-language-server = "^0.36.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
